--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,3 +1,6 @@
+# vim: set et sw=2:
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+
 new-session -n "$HOSTNAME"
 
 set -sg escape-time 0
@@ -11,5 +14,11 @@ bind-key -r L resize-pane -R 5
 
 bind-key -r o select-pane -t :.+
 
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+
+# Switch to vi-mode copy controls, version compatible
+if-shell -b '[ "$(echo "$TMUX_VERSION <= 2.3" | bc)" = 1 ]' " \
+    bind-key -t vi-copy 'v' begin-selection; \
+    bind-key -t vi-copy 'y' copy-selection"
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.3" | bc)" = 1 ]' " \
+    bind-key -T copy-mode-vi 'v' send -X begin-selection; \
+    bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel"
