Add local bins to .commonrc PATH

--- a/dotfiles/.commonrc
+++ b/dotfiles/.commonrc
@@ -15,3 +15,7 @@ alias beep='echo -e -n \\a'
 if [[ -z "$TMUX" ]]; then
         tmux attach 1>/dev/null 2>/dev/null
 fi
+
+# Add local bins
+if [[ -d "$HOME/.local/bin" ]]; then export PATH="$HOME/.local/bin:$PATH"; fi
+if [[ -d "$HOME/bin" ]]; then export PATH="$HOME/bin:$PATH"; fi
