Add local Go installation to PATH

--- a/dotfiles/.commonrc
+++ b/dotfiles/.commonrc
@@ -17,5 +17,6 @@ if [[ -z "$TMUX" ]]; then
 fi
 
 # Add local bins
+if [[ -d "$HOME/go/bin" ]]; then export PATH="$HOME/go/bin:$PATH"; fi
 if [[ -d "$HOME/.local/bin" ]]; then export PATH="$HOME/.local/bin:$PATH"; fi
 if [[ -d "$HOME/bin" ]]; then export PATH="$HOME/bin:$PATH"; fi
