Check in tmux plugin config

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,9 +1,12 @@
 # vim: set et sw=2:
-run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
 new-session -n "$HOSTNAME"
 
-set -sg escape-time 0
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set-window-option -g mode-keys vi
 
@@ -14,11 +17,15 @@ bind-key -r L resize-pane -R 5
 
 bind-key -r o select-pane -t :.+
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
-# Switch to vi-mode copy controls, version compatible
-if-shell -b '[ "$(echo "$TMUX_VERSION <= 2.3" | bc)" = 1 ]' " \
-    bind-key -t vi-copy 'v' begin-selection; \
-    bind-key -t vi-copy 'y' copy-selection"
-if-shell -b '[ "$(echo "$TMUX_VERSION > 2.3" | bc)" = 1 ]' " \
-    bind-key -T copy-mode-vi 'v' send -X begin-selection; \
-    bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel"
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on' # restore automatically on start
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
