--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -4,7 +4,7 @@
 [push]
 	default = simple
 [core]
-	pager = less -MR
+	pager = less -rM
 	editor = nvim
 
 [color]
@@ -12,7 +12,7 @@
 	status = auto
 	branch = auto
 	interactive = auto
-	ui = true
+	ui = auto
 	pager = true
 
 [alias]
@@ -21,3 +21,10 @@
 	autosquash = true
 [pull]
 	rebase = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+[init]
+	defaultBranch = main
